--- a/src/app/game-room/game-room.component.html
+++ b/src/app/game-room/game-room.component.html
@@ -323,7 +323,7 @@ aria-labelledby="AnnounceExileModel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <h5> {{exileName}} has been exiled! <i class="fa-solid fa-crown"></i> </h5>
+                <h5> {{exileName}} has been exiled! <i class="fa-solid fa-skull"></i> </h5>
             </div>
             <div class="modal-footer d-flex justify-content-right">
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="BeginToCheck()">
